Implement character info displays, and other minor changes
- Modified webpack dev server proxy
- Server serves a favicon
- Add serve-favicon dependency
- Add lots of styling
- Add custom dank mono font face

--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -1,3 +1,19 @@
+@use './variables.scss';
+@use './characterInfo/characterInfo.scss';
+@use './characterInfo/addCharacter.scss';
+@use './graph/graph.scss';
+
+@font-face {
+  font-family: "dankMono";
+  src: url('../resources/dankMonoRegular.otf');
+}
+
 html {
-  background-color: #272727;
+  font-family: 'dankMono';
+  background-color: variables.$background-color;
+}
+
+#body {
+  display: flex;
+  flex-direction: column;
 }
