--- a/client/styles/graph/graph.scss
+++ b/client/styles/graph/graph.scss
@@ -3,3 +3,20 @@
 #graph {
   align-self: center;
 }
+
+.toggles {
+  align-self: center;
+}
+
+div.toggle {
+  color: variables.$primary-text-color;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+}
+
+button.toggle {
+  height: 20px;
+  width: 35px;
+  align-self: center;
+}
